--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -99,6 +99,18 @@
   background-color: white;
 
 }
+#right_wrapper {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+}
+
+#nav-right {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 200px;
+}
 
 .navbar .btn3 {
   position: absolute;
