--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -41,6 +41,7 @@
   position: relative;
   width: 50%;
   margin: 20px;
+  
 }
 
 /* Make the image responsive */
@@ -150,4 +151,12 @@
   width: 12%;
   height: 15%;
   border-radius: 50%;
+}
+
+.footer {
+  width: 100%;
+  display: flex;
+  background-color: #222;
+  flex-direction: column;
+  align-items: center;
 }
